--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   unipost-app:
     build:
@@ -10,14 +8,52 @@ services:
       - "8501:8501"
     environment:
       - DJANGO_API_URL=${DJANGO_API_URL}
-      - ELASTICSEARCH_URL=${ELASTICSEARCH_URL}
-      - REDIS_URL=${REDIS_URL}
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
+      - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
+      - REDIS_URL=redis://redis:6379/0
     depends_on:
-      - redis
+      elasticsearch:
+        condition: service_healthy
+      redis:
+        condition: service_started
     volumes:
-      - ./app:/app
+      - .:/app
     networks:
       - unipost-network
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
+    container_name: unipost-elasticsearch
+    environment:
+      - node.name=elasticsearch
+      - cluster.name=unipost-cluster
+      - discovery.type=single-node
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - ELASTIC_PASSWORD=${ELASTICSEARCH_PASSWORD}
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=false
+      - xpack.security.transport.ssl.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - elasticsearch_data:/usr/share/elasticsearch/data
+      - ./elasticsearch/init:/usr/share/elasticsearch/init
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    networks:
+      - unipost-network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -s -u elastic:${ELASTICSEARCH_PASSWORD} http://localhost:9200/_cluster/health | grep -vq '\"status\":\"red\"'"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 40s
+    entrypoint: ["/usr/share/elasticsearch/init/entrypoint.sh"]
 
   redis:
     image: redis:7-alpine
@@ -28,6 +64,7 @@ services:
       - redis_data:/data
     networks:
       - unipost-network
+    command: redis-server --appendonly yes
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.11.0
@@ -35,9 +72,13 @@ services:
     ports:
       - "5601:5601"
     environment:
-      - ELASTICSEARCH_HOSTS=${ELASTICSEARCH_URL}
-      - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_USERNAME}
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_USERNAME=elastic
       - ELASTICSEARCH_PASSWORD=${ELASTICSEARCH_PASSWORD}
+      - XPACK_SECURITY_ENABLED=true
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
     networks:
       - unipost-network
 
@@ -54,6 +95,7 @@ services:
       - unipost-network
 
 volumes:
+  elasticsearch_data:
   redis_data:
 
 networks:
