Corrigindo a documentação do projeto.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,22 @@
 # Django API Configuration
-DJANGO_API_URL=http://localhost:8000
-DJANGO_API_TOKEN=your_jwt_token_here
+DJANGO_API_URL=http://127.0.0.1:8005
 
 # Elasticsearch Configuration  
-ELASTICSEARCH_URL=https://your-elasticsearch-host:9200
-ELASTICSEARCH_USERNAME=elastic
-ELASTICSEARCH_PASSWORD=your_elasticsearch_password
+ES_HOST=https://elastic:9200
+ES_USER=
+ES_PASS=
 
 # Redis Configuration
 REDIS_URL=redis://redis:6379/0
 
 # Application Settings
-SECRET_KEY=your_secret_key_here
 DEBUG=False
 
 # Text Generation Settings
-DEFAULT_MODEL=gpt-3.5-turbo
+# Text Generation Settings
+DEFAULT_MODEL=gpt-4o-mini
 MAX_TOKENS=1000
-TEMPERATURE=0.7
+TEMPERATURE=0.1
+
+# OpenAI API Configuration
+OPENAI_API_KEY=
