Abrindo a branch de desenvolvimento.

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,10 +1,11 @@
 [theme]
-# Tema claro baseado nas cores da Universidade Marketplaces
+# Tema moderno e profissional para UniPost AI
 base = "light"
-primaryColor = "#1e3a8a"          # Azul principal
-backgroundColor = "#ffffff"        # Fundo branco
-secondaryBackgroundColor = "#f8fafc"  # Cinza claro para elementos secundários
-textColor = "#334155"             # Texto principal em cinza escuro
+primaryColor = "#1f77b4"          # Azul moderno e acessível
+backgroundColor = "#ffffff"        # Fundo branco puro
+secondaryBackgroundColor = "#f8f9fa"  # Cinza muito claro para cards e elementos
+textColor = "#333333"             # Texto escuro para boa legibilidade
+font = "sans serif"               # Fonte limpa e moderna
 
 [server]
 # Configurações do servidor
