--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,17 @@ services:
     networks:
       - unipost-network
 
+  nginx:
+    image: nginx:alpine
+    container_name: unipost-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+    networks:
+      - unipost-network
+
 volumes:
   redis_data:
 
