--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,19 @@
 server {
     listen 80;
     server_name unipost.app;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name unipost.app;
+
+    ssl_certificate /etc/letsencrypt/live/unipost.app/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/unipost.app/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
 
     location / {
         proxy_pass http://app:8555;
